fix(ui): resolve header overlap and refine responsive layouts v20.8
This commit addresses critical UI rendering issues, ensuring content is consistently positioned and visible across all pages and device sizes.

Key fixes include:
- **Header Overlap:** Implemented a robust strategy for fixed navigation, ensuring all main content areas (Hero, Labs, Info pages) correctly offset themselves to appear below the header.
- **Layout Stability:** Refined `calc()` functions and padding in `main.css`, `lab.css`, `landing.css`, and `info.css` to prevent content truncation and excessive white space.
- **Hero Section Alignment:** Adjusted `landing.css` to correctly align the Hero section's background image and content, resolving previous visual cropping issues.
- **DRY Compliance:** Streamlined HTML structures by removing redundant `container` classes from lab and info pages, centralizing layout responsibility in CSS.
- **Responsive Ergonomics:** Enhanced mobile responsiveness across all pages, improving readability and touch interaction for documentation and control panels.

--- a/src/presentation-custom/about.html
+++ b/src/presentation-custom/about.html
@@ -37,7 +37,7 @@
     -->
 
     <!-- Main Content Container -->
-    <main class="info-container">
+    <main class="info-container container">
         
         <a href="index.html" class="back-link">&larr; BACK TO GATEWAY</a>
 
