--- a/src/presentation-custom/architecture.html
+++ b/src/presentation-custom/architecture.html
@@ -42,7 +42,7 @@
     -->
 
     <!-- Documentation Container -->
-    <main class="info-container">
+    <main class="info-container container">
         
         <a href="index.html" class="back-link">&larr; BACK TO GATEWAY</a>
 
