--- a/src/presentation-custom/image-lab.html
+++ b/src/presentation-custom/image-lab.html
@@ -39,7 +39,7 @@
     -->
 
     <!-- Main Laboratory Interface -->
-    <div class="container lab-layout">
+    <div class="lab-layout">
         
         <!-- LEFT COLUMN: Neural Control Manifold -->
         <aside class="control-panel">
