--- a/src/presentation-custom/video-lab.html
+++ b/src/presentation-custom/video-lab.html
@@ -56,7 +56,7 @@
     -->
 
     <!-- Laboratory Workspace -->
-    <div class="container lab-layout">
+    <div class="lab-layout">
         
         <!-- LEFT COLUMN: Temporal Control Panel -->
         <aside class="control-panel">
