--- a/src/presentation-custom/contact.html
+++ b/src/presentation-custom/contact.html
@@ -37,7 +37,7 @@
     -->
 
     <!-- Main Content Container -->
-    <main class="info-container">
+    <main class="info-container container">
         
         <a href="index.html" class="back-link">&larr; BACK TO GATEWAY</a>
 
