--- a/src/presentation-custom/about.html
+++ b/src/presentation-custom/about.html
@@ -100,6 +100,7 @@
     -->
     <script src="js/nav.js"></script>
     <script src="js/footer.js"></script>
+    <script src="js/cookie-consent.js"></script>
 
 </body>
 </html>
