--- a/src/presentation-custom/index.html
+++ b/src/presentation-custom/index.html
@@ -102,6 +102,7 @@
     -->
     <script src="js/nav.js"></script>
     <script src="js/footer.js"></script>
+    <script src="js/cookie-consent.js"></script>
 
 </body>
 </html>
