--- a/src/presentation-custom/legal.html
+++ b/src/presentation-custom/legal.html
@@ -80,7 +80,7 @@
             </div>
 
             <!-- 3. NEURAL CACHE (COOKIES) -->
-            <h2>3. Neural Cache Protocol (Cookie Policy)</h2>
+            <h2 id="cookies">3. Neural Cache Protocol (Cookie Policy)</h2>
             <p>
                 Z-Realism values data sovereignty. Our "Neural Cache" system operates strictly 
                 at a functional level. We do not use tracking or advertising cookies.
@@ -111,6 +111,7 @@
     -->
     <script src="js/nav.js"></script>
     <script src="js/footer.js"></script>
+    <script src="js/cookie-consent.js"></script>
 
 </body>
 </html>
