--- a/src/presentation-custom/video-lab.html
+++ b/src/presentation-custom/video-lab.html
@@ -148,6 +148,7 @@
     -->
     <script src="js/nav.js"></script>
     <script src="js/footer.js"></script>
+    <script src="js/cookie-consent.js"></script>
 
     <!-- 
       APPLICATION LOGIC 
